2015-12-22  Laxmeesh Markod <m.laxmeesh@samsung.com>
        * db/source/PPD/Samsung/PS/Samsung_K703_Series.ppd,
          db/source/PPD/Samsung/PS/Samsung_K7600_Series.ppd,
          db/source/PPD/Samsung/PS/Samsung_X703_Series.ppd,
          db/source/PPD/Samsung/PS/Samsung_X7600_Series.ppd,
	  db/source/printer/Samsung-K703.xml,
          db/source/printer/Samsung-K7600.xml,
	  db/source/printer/Samsung-X703.xml,
          db/source/printer/Samsung-X7600.xml:
          Added 4 new printers: Samsung K703, K7600, X703 and X7600 models
	  Updated PPDs of 7 printers: Samsung M458x, M5270, M4370 5370, X4300, X401, K4350 and K401 models
		  
2015-10-28  Laxmeesh Markod <m.laxmeesh@samsung.com>
        * db/source/PPD/Samsung/PS/Samsung_K3250_Series.ppd,
          db/source/PPD/Samsung/PS/Samsung_X3220_Series.ppd,
          db/source/printer/Samsung-K3250.xml,
          db/source/printer/Samsung-X3220.xml:
          Added 2 new printers: Samsung K3250 and X3220 models

2015-10-27 Zhang Xiufu <ZhangXiufu@rst.ricoh.com>
      * db/source/PPD/Gestetner/PS/Gestetner-MP_C306Z_PS.ppd,
        db/source/printer/Gestetner-MP_C306Z.xml,
        db/source/PPD/Lanier/PS/Lanier-MP_C306Z_PS.ppd,
        db/source/printer/Lanier-MP_C306Z.xml,
        db/source/PPD/Lanier/PS/Lanier-Pro_8110_PS.ppd,
        db/source/PPD/Lanier/PXL/Lanier-Pro_8110_PXL.ppd,
        db/source/printer/Lanier-Pro_8110.xml,
        db/source/PPD/Lanier/PS/Lanier-Pro_8120_PS.ppd,
        db/source/PPD/Lanier/PXL/Lanier-Pro_8120_PXL.ppd,
        db/source/printer/Lanier-Pro_8120.xml,
        db/source/PPD/Lanier/PS/Lanier-SP_C440DN_PS.ppd,
        db/source/printer/Lanier-SP_C440DN.xml,
        db/source/PPD/NRG/PS/NRG-MP_C306Z_PS.ppd,
        db/source/printer/NRG-MP_C306Z.xml,
        db/source/PPD/NRG/PS/NRG-Pro_8110_PS.ppd,
        db/source/PPD/NRG/PXL/NRG-Pro_8110_PXL.ppd,
        db/source/printer/NRG-Pro_8110.xml,
        db/source/PPD/NRG/PS/NRG-Pro_8120_PS.ppd,