@@ -23,10 +23,10 @@
     </general>
   </autodetect>
   <functionality>A</functionality>
-  <driver>PostScript-Samsung</driver>
+  <driver>Postscript-Samsung</driver>
   <drivers>
     <driver>
-      <id>PostScript-Samsung</id>
+      <id>Postscript-Samsung</id>
       <ppd>PPD/Samsung/PS/Samsung_K7600_Series.ppd</ppd>
     </driver>
   </drivers>
