@@ -1,3 +1,10 @@
+2016-01-05  Laxmeesh Markod <m.laxmeesh@samsung.com>
+        * db/source/printer/Samsung-K703.xml,
+          db/source/printer/Samsung-K7600.xml,
+          db/source/printer/Samsung-X703.xml,
+          db/source/printer/Samsung-X7600.xml:
+          Fixed driver name in xml files
+		  
 2015-12-22  Laxmeesh Markod <m.laxmeesh@samsung.com>
         * db/source/PPD/Samsung/PS/Samsung_K703_Series.ppd,
           db/source/PPD/Samsung/PS/Samsung_K7600_Series.ppd,
